# BioPro-SDK

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  README.md  RELEASE_GUIDE.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  publish.yml  test_and_lint.yml
API_Background_Engine/: index.html
API_Plugin_Base/: index.html
API_Reference/: index.html
API_Trust_Cryptography/: index.html
API_UI_Components/: index.html
Architectural_Design/: index.html
CI_CD_Guide/: index.html
Dev_Handbook/: index.html
Getting_Started/: index.html
docs/: API_Background_Engine.md  API_Plugin_Base.md  API_Reference.md  API_Trust_Cryptography.md  API_UI_Components.md  Architectural_Design.md  CI_CD_Guide.md  Dev_Handbook.md  Getting_Started.md  Home.md
docs/templates/: plugin-release-ci.yml  plugin-test-ci.yml
examples/background_task/: __init__.py  engine.py  manifest.json  panel.py  state.py
examples/hello_world/: __init__.py  manifest.json  ui.py
examples/themed_wizard/: __init__.py  config.py  manifest.json  wizard.py
search/: search_index.json
site/: 404.html  sitemap.xml
site/API_Background_Engine/: index.html
site/API_Plugin_Base/: index.html
site/API_Reference/: index.html
site/API_Trust_Cryptography/: index.html
site/API_UI_Components/: index.html
site/Architectural_Design/: index.html
site/CI_CD_Guide/: index.html
site/Dev_Handbook/: index.html
site/Getting_Started/: index.html
site/Home/: index.html
site/search/: search_index.json
src/biopro_sdk/: __init__.py  sdk_cli.py
src/biopro_sdk/contrib/: __init__.py
src/biopro_sdk/core/: __init__.py  ai.py  base.py  docs.py  managed_task.py  preferences.py  trust_overrides.py
src/biopro_sdk/host/: __init__.py  ai.py  docs.py  marketplace_cache.py  sign_plugin.py  trust_manager.py  trust_overrides.py  trust_path.py  trust_storage.py
src/biopro_sdk/plugin/: __init__.py  analysis.py  base.py  components.py  dialogs.py  events.py  interfaces.py  io.py  logging.py  managed_task.py  manifest_parser.py  security_parser.py  signals.py  state.py  validation.py  wizard.py
src/biopro_sdk/ui/: __init__.py
src/biopro_sdk/utils/: __init__.py  io.py  logging.py  sign_plugin.py
tests/: conftest.py  test_host_ai.py  test_host_security.py  test_namespaces.py  test_plugin_state.py  test_plugin_ui.py  test_sdk_cli.py
