[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopro-sdk"
version = "1.1.2"
description = "Software Development Kit and CLI for BioPro desktop plugins."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kalaimaran Balasothy" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.0",
    "PyQt6>=6.5.0",
    "requests>=2.28.0",
]

[project.scripts]
biopro-sdk = "biopro_sdk.sdk_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biopro_sdk = ["py.typed"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --cov=src/biopro_sdk --cov-report=term-missing --cov-report=html --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*PyQt6.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/biopro_sdk"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # Pyflakes & pycodestyle
    "I",            # isort (import sorting)
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "D",            # pydocstyle
]
ignore = [
    "E501",  # Line too long (handled by formatting standards)
    "E722",  # Bare excepts (utilised in AI connection retry fallbacks)
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class (redundant for UI colors/fallback classes)
    "D102",  # Missing docstring in public method (redundant for standard UI properties/callbacks)
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method (redundant by standard definition)
    "D106",  # Missing docstring in public nested class
    "D107",  # Missing docstring in __init__ (covered by class docstring)
    "D205",  # 1 blank line between summary and description
    "B024",  # ABC with no abstract methods (perfectly valid for base data/state models)
    "B027",  # Empty hooks in ABCs without abstract decorator (standard custom override hook pattern)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["assignment", "union-attr", "call-arg", "no-any-return", "method-assign", "misc", "no-redef"]
files = "src"
